Horizontal alignment in section best fixed.

--- a/app/styles/sections/_best.scss
+++ b/app/styles/sections/_best.scss
@@ -16,7 +16,14 @@
 }
 
 .best__item {
-	flex-basis: 33.3%;
+	flex-basis: 0;
+	flex-grow: 1;
+	flex-shrink: 1;
+	min-width: 0;
+	margin-right: 20px;
+	&:last-child {
+		margin-right: 0;
+	}
 }
 
 .best__icon-wrap {
